cabal-version:      2.4
name:               cardano-datum-keeper
version:            0.1.0.0

author:             ErgoLabs
maintainer:

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location:  https://github.com/ergolabs/cardano-datum-keeper

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
  import: base, project-config
  exposed-modules:
      Http.V1.DatumRoutes
      Http.V1.Routes
      Http.V1.SwaggerRoutes
      Http.Server
      Models.Api
      Repositories.DatumRepository
      Services.DatumService
      Settings.AppSettings
      Wirings.WiringApp
      Lib
  hs-source-dirs:
      src
  build-depends:
      aeson
    , ghc-prim
    , postgresql-simple
    , dhall
    , servant
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , swagger2
    , hashable            == 1.3.0.0
    , lens                >= 4.7.0.1  && <5.1
    , transformers
    , warp
    , bytestring
    , plutus-core
    , plutus-ledger-api -any
    , plutus-tx -any
    , plutus-ledger
    , binary
    , scientific
    , unliftio-core
  default-language: Haskell2010

executable cardano-datum-keeper-exe
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
      base >= 4.9 && < 5
    , cardano-datum-keeper
  default-language: Haskell2010
